--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
-  <title>Varad Bhogayata | Software Developer</title>
+  <title>Himanshu Damani | Ssalesforce Developer</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -158,8 +158,8 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Varad
-        Bhogayata</a><span class="black-text">Software Developer</span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Himanshu
+        Damani</a><span class="black-text">Ssalesforce Developer</span>
     </div>
   </nav>
 
@@ -209,18 +209,18 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="teal">Varad Bhogayata.</span></h2>
+              <h2>Hi, I'm <span class="teal">Himanshu Damani.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
+              <h5>Self-driven, quick starter, passionate salesforce developer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
             </div>
             <div class="social">
-              <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
+              <a href="http://linkedin.com/in/himanshudamani" target="_blank">
                 <button class="icon-btn linkedin">
                   <i class="fa fa-linkedin"></i>
                 </button>
               </a>
-              <a href="https://github.com/varadbhogayata/" target="_blank">
+              <a href="https://github.com/himanshudamani/" target="_blank">
                 <button class="icon-btn github">
                   <i class="fa fa-github"></i>
                 </button>
@@ -260,18 +260,18 @@
           </h2>
         </blockquote> -->        
         <p>
-          I am a Computer Science Grad Student at Arizona State University. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
+          I am a Salesforce Developer. Currently working at Nagarro. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
 
-          I have worked on technologies like Python, Django, Flask, MySQL, PostgreSQL, MongoDB, HTML5, CSS, Java, C++ during my bachelor's. I have 19 months of professional work experience which helped me strengthen my experience in Python, Flask, and Django.
+          Need to add details here''''. I have 3+ years of professional work experience which helped me strengthen my experience in Salesforce Development.
 
           I am passionate about developing complex applications that solve real-world problems impacting millions of users.
         </p>
         <p>
           <ul>
-            <li><b>Languages:</b> Python, Java, JavaScript, C, C++, HTML/CSS, Bash</li>
-            <li><b>Databases:</b> MySQL, PostgreSQL, MongoDB</li>
-            <li><b>Libraries:</b> NumPy, Pandas, OpenCV</li>
-            <li><b>Frameworks:</b> Flask, Django, Node.js, Keras, TensorFlow, PyTorch, Bootstrap, Apache Beam</li>
+            <li><b>Languages:</b> Apex, Java, JavaScript, C, C++, HTML/CSS</li>
+            <li><b>Databases:</b> MySQL, PostgreSQL</li>
+            <!--<li><b>Libraries:</b> NumPy, Pandas, OpenCV</li>
+            <li><b>Frameworks:</b> Flask, Django, Node.js, Keras, TensorFlow, PyTorch, Bootstrap, Apache Beam</li>-->
             <li><b>Tools & Technologies:</b> Git, Docker, AWS, GCP, Heroku, JIRA</li>
           </ul>
           
@@ -316,28 +316,28 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.zhiffy.com/" target="_blank"
-                      class="teal-text hoverline">Zhiffy</a></span>
+                      class="teal-text hoverline">Test</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Engineer</div>
+            <div class="role brown-text text-darken-2">Salesforce Engineer</div>
             <ul>
               <li>
-                Developed and managed the backend of an e-commerce platform using Flask, MongoDB, and AWS.
+                Test Test Test Test Test Test Test Test Test Test.  
               </li>
               <li>
-                Worked on three web applications targeting customers, selling vendors, and admin users; built 50+ RESTful APIs with functionalities
-such as login/sign up, view a product, add a product to cart, checkout the order, etc.
+                Test Test Test Test Test Test Test Test Test Test.  Test Test Test Test Test Test Test Test Test Test.  Test Test Test Test Test Test Test Test Test Test.  
+                Test Test Test Test Test Test Test Test Test Test.  Test Test Test Test Test Test Test Test Test Test.  
               </li>
-              <li>Improved the response time by 20% by refactoring the codebase and changing database design and queries.</li>
-              <li>Added a bulk upload feature which reduced the manual work of adding products into a database.</li>
+              <li>Test Test Test Test Test Test Test Test Test Test.  </li>
+              <li>Test Test Test Test Test Test Test Test Test Test.  </li>
               <li>
-                <b>Tools:</b> Python, Flask, MongoDB
+                <b>Tools:</b> Test , test, test
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>July 2020 - Nov 2020 | Hyderabad, India</span>
+            <span>test 2020 - test 2020 | Remote, India</span>
           </div>
         </div>
 
@@ -353,33 +353,30 @@ such as login/sign up, view a product, add a product to cart, checkout the order
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="http://meditab.com" target="_blank"
-                      class="teal-text hoverline">Meditab</a></span>
+                      class="teal-text hoverline">Test</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Programmer Analyst</div>
+            <div class="role brown-text text-darken-2">Test Developer</div>
             <ul>
               <li>
-                Customized a tree-based optimization algorithm that separates drugs into distinct groups to maximize the concurrent execution of drug
-dispenser robots; improved an optimization algorithm that reduced the cycle-time of the automation process by 25%.
+                Test Test Test Test Test Test Test Test Test Test.  Test Test Test Test Test Test Test Test Test Test.  
+                Test Test Test Test Test Test Test Test Test Test.  Test Test Test Test Test Test Test Test Test Test.  
               </li>
               <li>
-                Devised a customized recursion algorithm to extend the functionality of the current environment to a multi-robot and multi-system
-environment
+                Test Test Test Test Test Test Test Test Test Test.  Test Test Test Test Test Test Test Test Test Test.  
               </li>
               <li>
-                Built a modular video analytics app using Flask, OpenCV that tracks the location of each human in a multi-camera environment;
-utilized perspective transformation, object detection, and object tracking to find the location of a human.
+                Test Test Test Test Test Test Test Test Test Test.  Test Test Test Test Test Test Test Test Test Test.  Test Test Test Test Test Test Test Test Test Test.  
               </li>
-              <li>Increased the speed of the video analytics app by 20% by using a customized YOLOv3 algorithm to perform object detection and
-                DeepSORT algorithm for multi-object tracking.</li>
+              <li>Test Test Test Test Test Test Test Test Test Test.  Test Test Test Test Test Test Test Test Test Test.  Test Test Test Test Test Test Test Test Test Test.  </li>
               <li>
-                <b>Tools:</b> Python, Flask, OpenCV, Keras, Tensorflow, PyTorch
+                <b>Tools:</b> TEst, test test, test
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>Dec 2018 - July 2019 | Ahmedabad, India</span>
+            <span>Test 2018 - Test 2019 | Remote, India</span>
           </div>
         </div>
 
@@ -396,26 +393,25 @@ utilized perspective transformation, object detection, and object tracking to fi
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="#experience" class="teal-text hoverline">Mtag
-                      Innovations</a></span>
+                      Test</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Developer</div>
+            <div class="role brown-text text-darken-2">Test Developer</div>
             <ul>
               <li>
-                Programmed a cloud-based web app using Flask and JavaScript aimed at storing, visualizing, and tracking temperature and humidity
-of each drug container to estimate the degradation of the drug.
+                PTest Test Test Test Test Test Test Test Test Test.  Test Test Test Test Test Test Test Test Test Test.  Test Test Test Test Test Test Test Test Test Test.  .
               </li>
               <li>
-                Created an alert system to send notifications and emails when the parameters exceed the threshold.
+                Test Test Test Test Test Test Test Test Test Test.  Test Test Test Test Test Test Test Test Test Test.  .
               </li>
               <li>
-                <b>Tools:</b> Python, Flask, JavaScript
+                <b>Tools:</b> TEst, Test, stest
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>July 2018 - Nov 2018 | Ahmedabad, India</span>
+            <span>July 2018 - Nov 2018 | REmote, India</span>
           </div>
         </div>
 
@@ -431,29 +427,25 @@ of each drug container to estimate the degradation of the drug.
                 <p>
                   <span class="card-title"><a href="https://www.cignex.com" target="_blank"
                       class="teal-text hoverline">CIGNEX
-                      Datamatics </a></span>
+                      Test </a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Project Trainee</div>
+            <div class="role brown-text text-darken-2">Test Trainee</div>
             <ul>
               <li>
-                Designed a library management system for a local library, where we undertook activities like requirement
-                elicitation, preparing Data Flow
-                and Entity-Relationship diagrams.
+                Test Test Test Test Test Test Test Test Test Test.  Test Test Test Test Test Test Test Test Test Test.  Test Test Test Test Test Test Test Test Test Test.  .
               </li>
               <li>
-                Delivered a solution for a POC involving Automatic Financial Document Classifier using Natural Language
-                Processing and Support Vector
-                Machines with 96% accuracy on the company’s data.
+                Test Test Test Test Test Test Test Test Test Test.  Test Test Test Test Test Test Test Test Test Test.  a.
               </li>
               <li>
-                <b>Tools:</b> Python, Scikit-learn, NLTK
+                <b>Tools:</b> Test, test, test
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>June 2017 - July 2017 | Ahmedabad, India</span>
+            <span>June 2017 - July 2017 | REmote, India</span>
           </div>
         </div>
 
