--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
-  <title>Himanshu Damani | Ssalesforce Developer</title>
+  <title>Himanshu Damani | Salesforce Developer</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -159,7 +159,7 @@
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
       <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Himanshu
-        Damani</a><span class="black-text">Ssalesforce Developer</span>
+        Damani</a><span class="black-text">Salesforce Developer</span>
     </div>
   </nav>
 
@@ -1005,7 +1005,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Pythonist", "Developer", "Fast Learner"],
+      strings: ["Trailblazer", "Developer", "Fast Learner"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
