--- a/index.html
+++ b/index.html
@@ -975,27 +975,27 @@
         <p>
           <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+14805722456</a></a>
+              aria-label="Call Varad">+91-7976780546</a></a>
         </p>
         <p>
           <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
             data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
+              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:himanshudamani@gmail.com"
+              class="hoverline">himanshuvdamani@gmail.com</a></a>
         </p>
         <p>
           <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
             data-position="top" data-tooltip="View Varad on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
-              target="_blank">github.com/varadbhogayata</a></a>
+              aria-label="Varad on Github" href="http://github.com/himanshudamani" class="hoverline"
+              target="_blank">github.com/himanshudamani</a></a>
         </p>
         <p>
           <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
             data-position="top" data-tooltip="View Varad on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
-              class="hoverline" target="_blank">linkedin.com/in/varadbhogayata</a></a>
+              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/himanshudamani"
+              class="hoverline" target="_blank">linkedin.com/in/himanshudamani</a></a>
         </p>
       </div>
     </section>
